# night_shift

./: .gitignore  Cargo.toml  LICENSE.md  README.md
assets/projects/: big ghost.pdn  dead.pdn  experience orb.pdn  fireball.pdn  ghost.pdn  guy.pdn  map.pdn  title.pdn  tombstones.pdn
assets/shaders/: healthbar.wgsl  healthbar_ui.wgsl
src/: audio.rs  camera.rs  character.rs  debug.rs  difficulty.rs  end.rs  enemy.rs  experience.rs  health.rs  healthbar.rs  loading.rs  main.rs  main_menu.rs  map.rs  pathfinding.rs  pause_menu.rs  physics.rs  player.rs  states.rs  ui.rs
src/devices/: fireball.rs  fireball_upgrades.rs  mod.rs
