[package]
name = "night_shift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["mp3"] }
bevy_egui = "0.23.0"
bevy_rapier2d = { version = "0.23.0", features = [
    "debug-render-2d",
    "simd-stable",
] }
rand = "0.8.5"
rand_distr = "0.4.3"
